# automc

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml  release-plz.yml  rust.yml
src/: api.rs  args.rs  config.rs  error.rs  java.rs  main.rs  server_info.rs
src/distribution/: fabric.rs  folia.rs  mod.rs  paper.rs  purpur.rs  spigot.rs  vanilla.rs  velocity.rs
