[package]
name = "automc"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
description = "A CLI tool for installing Minecraft server software"
repository = "https://www.github.com/TgZ39/automc"
categories = ["command-line-utilities"]
keywords = ["minecraft", "minecraft-server"]

[dependencies]
reqwest = { version = "0.12.4", features = ["stream"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0.201", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
bytes = "1.6.0"
indicatif = "0.17.8"
futures-util = "0.3.30"
inquire = "0.7.5"
thiserror = "1.0.60"
itertools = "0.12.1"
spinners = "4.1.1"
clap = { version = "4.5.4", features = ["derive"] }
gjson = "0.8.1"
