[package]
name = "automc"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"
description = "A CLI tool for installing Minecraft server software"
repository = "https://www.github.com/TgZ39/automc"
categories = ["command-line-utilities"]
keywords = ["minecraft", "minecraft-server"]

[dependencies]
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
bytes = "1.7"
indicatif = "0.17"
futures-util = "0.3"
inquire = "0.7"
thiserror = "1.0"
itertools = "0.13"
spinners = "4.1"
clap = { version = "4.5", features = ["derive"] }
confy = { version = "0.6", features = ["toml", "toml_conf"] }
gjson = "0.8"
java-locator = "0.1"
